--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,8 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
+* Version 0.2.7 (unreleased)
+
 * Version 0.2.6 (released 2005-08-08)
 
 ** The gsasl tool now try to connect to all addresses for a server name.
