--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,10 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 0.2.7 (unreleased)
 
+** Fix build problems when cross-compiling to uClibc platforms.
+
+** Detecting and using the readline library has been improved.
+
 * Version 0.2.6 (released 2005-08-08)
 
 ** The gsasl tool now try to connect to all addresses for a server name.
