--- a/NEWS
+++ b/NEWS
@@ -8,7 +8,7 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 0.2.8 (unreleased)
 
-** The gsasl tool now support STARTTLS for IMAP and SMTP.
+** The gsasl tool now support STARTTLS for IMAP and SMTP using GnuTLS.
 
 ** The --client and --server parameters for the gsasl tool now work properly.
 
