--- a/lib/NEWS
+++ b/lib/NEWS
@@ -8,6 +8,9 @@ See the end for copying conditions.
 
 ** Improved checking for libidn when the system need -R, -rpath or similar.
 
+** API and ABI modifications.
+No changes since last version.
+
 * Version 0.2.7 (released 2005-08-25)
 
 ** Fixed bug in GNU SASL 0.1.x.backwards compatibility code in the
